cluster/network/cilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt'
    external-dns.alpha.kubernetes.io/hostname: 'hubble.home.jamesmoriarty.xyz'
spec:
  tls:
  - hosts:
    - 'hubble.home.jamesmoriarty.xyz'
    secretName: hubble-tls
  rules:
  - host: 'hubble.home.jamesmoriarty.xyz'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
